Launch EXE detached and non-blocking in ControlApp.start; simplify and normalize start logs; preserve Java/NMS env injections; discard child IO to prevent UI blocking